# discloner

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: config.cpp  config.hpp  consts.hpp  io.cpp  io.hpp  main.cpp  sys.cpp  sys.hpp  tools.cpp  tools.hpp
src/core/: Error.cpp  Error.h  cloner.cpp  cloner.h  error.cpp  error.h
